# cTensor

.github/scripts/: compare_results.py  pytorch_comparison.py
.github/workflows/: ci.yml  ci2.yml  test.yml
include/: cten.h
src/: basic.c  operator.c  utils.c
src2/: main.c
tests/: CMakeLists.txt  README.md  TESTING_STATUS.md  generate_reference_data.py  test_framework.c  test_framework.h  test_main.c  test_operators.c  test_operators_implemented.c
tests/reference_data/: activation_functions.json  arithmetic_ops.json  loss_functions.json  matrix_ops.json  neural_network_ops.json  pytorch_reference.json  reduction_ops.json  test_tensors.json
